--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="author" content="rawringriha" />
     <meta name="keywords" content="data science, technology, programming, portfolio, dinosaur" />
     <title>rawring-riha</title>
-    <link rel="stylesheet" type="text/css" href="/css/intro.css" />
-    <link rel="icon" href="/img/green_dino.png" />
+    <link rel="stylesheet" type="text/css" href="css/intro.css" />
+    <link rel="icon" href="img/green_dino.png" />
 </head>
 <body>
     <div id="splash">
         
-        <img id="dino" src="/img/green_dino.png" alt="Pixelated Dino" />
+        <img id="dino" src="img/green_dino.png" alt="Pixelated Dino" />
         
         <h1>rawring-riha</h1>
         <h2>Dino who loves data and tech</h2>
