chore: add art and photographs

--- a/public/art/index.html
+++ b/public/art/index.html
@@ -294,11 +294,15 @@ Filter by theme below to explore.</p>
 </div>
 <!-- Art gallery -->
 <div class="gallery">
-  <img src="/img/art/1.png" data-tags="sketch" alt="Sketch 1">
+  <img src="/img/art/1.jpg" data-tags="sketch" alt="Sketch 1">
   <img src="/img/art/2.png" data-tags="sketch" alt="Sketch 2">
   <img src="/img/art/3.png" data-tags="sketch" alt="Sketch 3">
   <img src="/img/art/4.png" data-tags="sketch" alt="Sketch 4">
-  <img src="/img/art/5.png" data-tags="sketch" alt="Sketch 5">
+  <img src="/img/art/5.jpg" data-tags="sketch" alt="Sketch 5">
+  <img src="/img/art/6.png" data-tags="sketch" alt="Sketch 2">
+  <img src="/img/art/7.jpg" data-tags="sketch" alt="Sketch 3">
+  <img src="/img/art/8.png" data-tags="sketch" alt="Sketch 4">
+  <img src="/img/art/9.png" data-tags="sketch" alt="Sketch 5">
 </div>
 <!-- Lightbox container -->
 <div id="lightbox">
